Ajout des contraintes de Connaissances

--- a/src/LarpManager/Views/admin/connaissance/detail.twig
+++ b/src/LarpManager/Views/admin/connaissance/detail.twig
@@ -41,5 +41,13 @@
 			<p>{{ connaissance.description|markdown }}</p>
 		</div>
 	</div>
+	{% if connaissance.contraintes %}
+	<div class="panel panel-default">
+		<div class="panel-heading"><h4>Contraintes</h4></div>
+		<div class="panel-body">
+			<p>{{ connaissance.contraintes|markdown }}</p>
+		</div>
+	</div>
+	{% endif %}
 		
 {% endblock content %}
