Retire la notion de niveau aux Connaissances

--- a/src/LarpManager/Views/admin/connaissance/list.twig
+++ b/src/LarpManager/Views/admin/connaissance/list.twig
@@ -19,7 +19,7 @@
 			<li class="list-group-item">
 				<div class="row">
 					<div class="col-md-8">
-						{% if connaissance.secret %}<span style="color:red;">Secret</span> - {% endif %}<strong>{{ connaissance.label }}</strong> - Niveau {{ connaissance.niveau }}
+						{% if connaissance.secret %}<span style="color:red;">Secret</span> - {% endif %}<strong>{{ connaissance.label }}</strong>
 						{{ connaissance.description|markdown }}
 						{% if connaissance.contraintes %}⚠️ <strong>Contraintes :</strong>{{ connaissance.contraintes|markdown }}{% endif %}
 						{% if connaissance.documentUrl %}
