--- a/src/LarpManager/Views/admin/connaissance/detail.twig
+++ b/src/LarpManager/Views/admin/connaissance/detail.twig
@@ -17,12 +17,7 @@
 		</div>
 		{% endif %}
 		<div class="list-group-item">
-			<div class="list-group-item-heading"><h6>Label</h6></div>
-			<div class="list-group-item-text">{{ connaissance.label }}</div>
-		</div>
-		<div class="list-group-item">
-			<div class="list-group-item-heading"><h6>Niveau</h6></div>
-			<div class="list-group-item-text">{{ connaissance.niveau }}</div>
+			<div class="list-group-item-text"><strong>{{ connaissance.label }}</strong></div>
 		</div>
 		<div class="list-group-item">
 			<h4 class="list-group-item-heading">Document</h4>
