--- a/src/LarpManager/Views/public/personnage/detail.twig
+++ b/src/LarpManager/Views/public/personnage/detail.twig
@@ -100,6 +100,7 @@
 					{% include 'public/personnage/fragment/technologie.twig' with {'personnage': personnage, 'participant': participant} %}
 					{% include 'public/personnage/fragment/connaissance.twig' with {'personnage': personnage, 'participant': participant} %}
 					{% include 'public/personnage/fragment/item.twig' with {'personnage': personnage, 'participant': participant} %}
+					{% include 'public/personnage/fragment/document.twig' with {'personnage': personnage, 'participant': participant} %}
 					{% include 'public/personnage/fragment/politique.twig' with {'personnage': personnage, 'participant': participant, 'lois': lois} %}
 					{% include 'public/personnage/fragment/priere.twig' with {'personnage': personnage, 'participant': participant} %}
 					{% include 'public/personnage/fragment/religion.twig' with {'personnage': personnage, 'participant': participant} %}
