--- a/src/LarpManager/Views/admin/groupe/fragment/enveloppe.twig
+++ b/src/LarpManager/Views/admin/groupe/fragment/enveloppe.twig
@@ -155,7 +155,7 @@ TOTAL : {{ groupe.richesseTotale|default(0) }} pièces d'argent
 				<a href="{{ path('personnage.admin.update.ingredient', {'personnage': participant.personnage.id}) }}">Modifier la liste des ingrédients</a>
 				<ul>
 				{% for personnageIngredient in participant.personnage.personnageIngredients %}
-					<li>{{personnageIngredient.nombre}} - {{ personnageIngredient.ingredient }}</li>
+					<li>{{personnageIngredient.nombre}} - {{ personnageIngredient.ingredient }} ({{ personnageIngredient.ingredient.dose }})</li>
 				{% else %}
 					<li>Aucun</li>
 				{% endfor %}
