--- a/src/LarpManager/Views/admin/groupe/printMateriel.twig
+++ b/src/LarpManager/Views/admin/groupe/printMateriel.twig
@@ -101,7 +101,7 @@ body {
 		<strong>Ingrédients</strong>
 		<ul>
 			{% for personnageIngredient in participant.personnage.personnageIngredients %}
-				<li>{{personnageIngredient.nombre}} - {{ personnageIngredient.ingredient }}</li>
+				<li>{{personnageIngredient.nombre}} - {{ personnageIngredient.ingredient }} ({{ personnageIngredient.ingredient.dose }})</li>
 			{% endfor %}
 		</ul>
 	{% endif %}
