--- a/src/LarpManager/Views/admin/ingredient/detail.twig
+++ b/src/LarpManager/Views/admin/ingredient/detail.twig
@@ -20,6 +20,10 @@
 			<div class="list-group-item-text">{{ ingredient.niveau }}</div>
 		</div>
 		<div class="list-group-item">
+			<div class="list-group-item-heading"><h6>Couleur</h6></div>
+			<div class="list-group-item-text">{{ ingredient.color }}</div>
+		</div>		
+		<div class="list-group-item">
 			<div class="list-group-item-heading"><h6>Dose</h6></div>
 			<div class="list-group-item-text">{{ ingredient.dose }}</div>
 		</div>
