--- a/src/LarpManager/Views/admin/ingredient/list.twig
+++ b/src/LarpManager/Views/admin/ingredient/list.twig
@@ -18,7 +18,7 @@
 			<li class="list-group-item">
 				<div class="row">
 					<div class="col-md-8">
-						<strong>{{ ingredient.label }} ({{ ingredient.dose }}) - Niveau {{ ingredient.niveau }}</strong>
+						<strong>{{ ingredient.label }} - {{ ingredient.color }} (Niveau {{ ingredient.niveau }}) : {{ ingredient.dose }}</strong>
 						{{ ingredient.description|markdown }}						
 					</div>
 					<div class="col-md-4">
