--- a/src/LarpManager/Views/admin/personnage/enveloppe.twig
+++ b/src/LarpManager/Views/admin/personnage/enveloppe.twig
@@ -81,7 +81,7 @@
 	<strong>Ingrédients</strong>
 	<ul>
 		{% for personnageIngredient in personnage.personnageIngredients %}
-			<li>{{personnageIngredient.nombre}} - {{ personnageIngredient.ingredient }} ({{ personnageIngredient.ingredient.dose }})</li>
+			<li>{{personnageIngredient.nombre}} {{ personnageIngredient.ingredient }} - {{ personnageIngredient.ingredient.color }} : {{ personnageIngredient.ingredient.dose }}</li>
 		{% endfor %}
 	</ul>
 {% endif %}
@@ -91,7 +91,7 @@
 	<strong>Ressources</strong>
 	<ul>
 		{% for personnageRessource in personnage.personnageRessources %}
-			<li>{{personnageRessource.nombre}} - {{ personnageRessource.ressource }}</li>
+			<li>{{personnageRessource.nombre}} {{ personnageRessource.ressource }}</li>
 		{% endfor %}
 	</ul>
 {% endif %}
