--- a/src/LarpManager/Views/public/sort/detail.twig
+++ b/src/LarpManager/Views/public/sort/detail.twig
@@ -19,7 +19,7 @@
 	
 	<blockquote>{{ sort.description|markdown }}</blockquote>
 	
-	<center><h6>Coût en Mana : {% if sort.domaine in participant.personnage.domaines %}{{ sort.niveau }}{% else %}{{ sort.niveau + 1 }}{% endif %}</h6></center>
+	<center><h6>Coût en Perles : {% if sort.domaine in participant.personnage.domaines %}{{ sort.niveau + 1 }}{% else %}{{ sort.niveau + 2 }}{% endif %}</h6></center>
 	
 	<object type="application/pdf" width="100%" height="1200px" >
 		<param name="src" value="{{ path('participant.sort.document',{'participant': participant.id, 'sort' :sort.id, 'filename': filename}) }}" />
