--- a/src/LarpManager/Views/personnage/domaineMagie.twig
+++ b/src/LarpManager/Views/personnage/domaineMagie.twig
@@ -41,23 +41,23 @@
 			</thead>
 			<tbody>
 				<tr>
-					<th>Coût en mana dans le domaine du mage</th>
-					<td>1</td>
-					<td>2</td>
-					<td>3</td>
-					<td>4</td>
-				</tr>
-				<tr>
-					<th>Coût en mana en dehors du domaine du mage</th>
+					<th>Coût en Perles dans le domaine du mage</th>
 					<td>2</td>
 					<td>3</td>
 					<td>4</td>
 					<td>5</td>
 				</tr>
+				<tr>
+					<th>Coût en Perles en dehors du domaine du mage</th>
+					<td>3</td>
+					<td>4</td>
+					<td>5</td>
+					<td>6</td>
+				</tr>
 			</tbody>
 		</table>
-		
-		<p>Example : Un sort de niveau 2 coutera 2 points de Mana au mage connaissant le domaine de magie du sort, et 3 points de mana au mage ne connaissant pas le domaine de magie.</p> 
+			
+		<p>Example : Un sort de niveau 2 coutera 3 Perles au mage connaissant le domaine de magie du sort, et 4 Perles au mage ne connaissant pas le domaine de magie.</p>
 	</div>
 	
 	{% for domaine in domaines %}
