--- a/src/LarpManager/Views/admin/groupe/fragment/enveloppe.twig
+++ b/src/LarpManager/Views/admin/groupe/fragment/enveloppe.twig
@@ -7,7 +7,16 @@
 <ul>
 {% if groupe.hasRichesse %}
 	{% for territoire in groupe.territoires %}
-		<li><strong>{{ territoire.richesse|default(0) }} pièces d'argent</strong> fournies par <strong>{{ territoire.nom }}</strong></li>
+		<li><strong>{{ 3*territoire.richesse|default(0) }} pièces d'argent</strong> fournies par <strong>{{ territoire.nom }}</strong>. Etat {{ territoire.statut|default('stable')|lower }} : {% if territoire.statut == 'Instable' %}0.5 x {% endif %}3 x ( {{ territoire.tresor|default(0) }} [Fief]
+					{% for construction in territoire.constructions %}
+						{% if construction.id == 6 or construction.id == 10 %}
+							+ 5 [{{ construction.label }}]
+						{% endif %}
+						{% if construction.id == 23 %}
+							+ 10 [{{ construction.label }}]
+						{% endif %}
+					{% endfor %})
+				</li>
 	{% endfor %}
 {% else %}
 	<li>Aucune pièces d'argent fournies par les territoires</li>
@@ -24,7 +33,7 @@ TOTAL : {{ groupe.richesseTotale|default(0) }} pièces d'argent
 {% if groupe.hasRessource %}
 	{% for territoire in groupe.territoires %}
 		{% for ressource in territoire.exportations %}
-	    	<li><strong>{{ ressource.label }}</strong> fourni par <strong>{{ territoire.nom }}</strong></li>
+	    	<li><strong>3 {{ ressource.label }}</strong> fourni(e)s par <strong>{{ territoire.nom }}</strong></li>
 		{% endfor %}
 	{% endfor %}
 {% else %}
@@ -46,7 +55,7 @@ TOTAL : {{ groupe.richesseTotale|default(0) }} pièces d'argent
 {% if groupe.hasIngredient %}
 	{% for territoire in groupe.territoires %}
 		{% for ingredient in territoire.ingredients %}
-			<li><strong>{{ ingredient.label }}</strong> fourni par <strong>{{ territoire.nom }}</strong></li>
+			<li><strong>5 {{ ingredient.label }}</strong> fourni(e)s par <strong>{{ territoire.nom }}</strong></li>
 	    {% endfor %}
 	{% endfor %}
 {% else %}
