--- a/src/LarpManager/Views/public/age/fragment/info.twig
+++ b/src/LarpManager/Views/public/age/fragment/info.twig
@@ -10,7 +10,7 @@
 		<div class="list-group-item">
 			<div class="list-group-item-heading"><h6>{{ age.label }}</h6></div>
 			<div class="list-group-item-text">{{ age.description|markdown }}</div>
-			<div class="list-group-item-text"><strong>{{ age.bonus|default(0) }}</strong> points d'expérience supplémentaire</div>
+			<div class="list-group-item-text"><strong>{{ age.bonus|default(0) }}</strong> points d'expérience supplémentaires</div>
 		</div>
 	{% endfor %}
 </div>
