--- a/src/LarpManager/Views/public/groupe/fragment/detail.twig
+++ b/src/LarpManager/Views/public/groupe/fragment/detail.twig
@@ -70,7 +70,7 @@
 		<strong>Richesse : </strong>
 		<ul>
 		    {% for territoire in groupe.territoires %}   				
-				<li><strong>{{ territoire.tresor|default(0) }} PA</strong> fourni par <strong>{{ territoire.nom }}</strong></li>
+				<li><strong>{{ territoire.tresor|default(0) }} pièces d'argent</strong> fournies par <strong>{{ territoire.nom }}</strong></li>
 		    {% endfor %}
 	    </ul>
 	    				
@@ -78,7 +78,7 @@
 	    <ul>
 			{% for territoire in groupe.territoires %}
 		    	{% for ressource in territoire.exportations %}
-			    	<li><strong>{{ ressource.label }}</strong> fourni par <strong>{{ territoire.nom }}</strong></li>
+			    	<li><strong>{{ ressource.label }}</strong> fourni(e)s par <strong>{{ territoire.nom }}</strong></li>
 	    		{% endfor %}
 	    	{% endfor %}
 	    </ul>
@@ -90,7 +90,7 @@
 	    <ul>
 			{% for territoire in groupe.territoires %}
 		    	{% for ingredient in territoire.ingredients %}
-		    		<li><strong>{{ ingredient.label }}</strong> fourni par <strong>{{ territoire.nom }}</strong></li>
+		    		<li><strong>{{ ingredient.label }}</strong> fourni(e)s par <strong>{{ territoire.nom }}</strong></li>
 			    {% endfor %}
 		   	{% endfor %}
 		</ul>
