--- a/src/LarpManager/Views/admin/groupe/printAll.twig
+++ b/src/LarpManager/Views/admin/groupe/printAll.twig
@@ -37,8 +37,12 @@ table tr td {
 	<ul>
 	{% if groupe.hasRessource %}
 		{% for territoire in groupe.territoires %}
+			{% set nbRessource = 3 %}
+			{% if territoire.statut == 'Instable' %}
+				{% set nbRessource = 2 %}
+			{% endif %}
 			{% for ressource in territoire.exportations %}
-		    	<li><strong>3 {{ ressource.label }}</strong> fourni(e)s par <strong>{{ territoire.nom }}</strong></li>
+		    	<li><strong>{{ nbRessource }} {{ ressource.label }}</strong> fourni(e)s par <strong>{{ territoire.nom }}</strong></li>
 			{% endfor %}
 		{% endfor %}
 	{% else %}
@@ -65,8 +69,12 @@ table tr td {
 	<ul>
 	{% if groupe.hasIngredient %}
 		{% for territoire in groupe.territoires %}
+			{% set nbIngredient = 5 %}
+			{% if territoire.statut == 'Instable' %}
+				{% set nbIngredient = 3 %}
+			{% endif %}
 			{% for ingredient in territoire.ingredients %}
-				<li><strong>5 {{ ingredient.label }}</strong> fourni(e)s par <strong>{{ territoire.nom }}</strong></li>
+				<li><strong>{{ nbIngredient }} {{ ingredient.label }}</strong> fourni(e)s par <strong>{{ territoire.nom }}</strong></li>
 		    {% endfor %}
 		{% endfor %}
 	{% else %}
